解决 commentVO isLike 问题，增加 ArchPicture 数据库
